--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
   "devDependencies": {
     "@ohbug/core": "^0.0.7",
     "@types/js-cookie": "^2.2.5",
-    "@types/react-timeago": "^4.1.1"
+    "@types/react-timeago": "^4.1.1",
+    "cz-conventional-changelog": "3.1.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
