--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,16 @@
     "importHelpers": true,
     "jsx": "react",
     "esModuleInterop": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "baseUrl": "./",
     "strict": true,
+    "skipLibCheck": true,
     "paths": {
       "@/*": ["src/*"],
       "@@/*": ["src/.umi/*"]
     },
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
