--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "antd": "^4.1.0",
     "axios": "^0.19.2",
     "clsx": "^1.1.0",
+    "dayjs": "^1.8.23",
     "js-cookie": "^2.2.1",
     "lint-staged": "^10.0.7",
-    "moment": "^2.24.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
