style: 使用 stylelint 规范样式

--- a/package.json
+++ b/package.json
@@ -63,6 +63,10 @@
       "eslint --fix",
       "prettier --parser=typescript --write",
       "git add"
+    ],
+    "*.less": [
+      "stylelint --fix",
+      "git add"
     ]
   },
   "husky": {
