--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "clsx": "^1.1.0",
     "dayjs": "^1.8.23",
     "js-cookie": "^2.2.1",
-    "lint-staged": "^10.0.7",
-    "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
@@ -32,8 +30,7 @@
     "redux-persist": "^6.0.0",
     "rrweb-player": "^0.4.3",
     "source-map-trace": "^0.0.1",
-    "umi": "^3.0.16",
-    "yorkie": "^2.0.0"
+    "umi": "^3.0.16"
   },
   "devDependencies": {
     "@ohbug/core": "^0.0.7",
@@ -49,10 +46,9 @@
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "husky": "^4.2.3",
+    "lint-staged": "^10.1.1",
+    "prettier": "^2.0.2",
     "typescript": "^3.8.3"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
