build: 拆分 .umirc.ts

--- a/package.json
+++ b/package.json
@@ -52,17 +52,14 @@
   },
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "*.ts?(x)": [
       "eslint --fix",
-      "prettier --parser=typescript --write",
-      "git add"
+      "prettier --parser=typescript --write"
     ],
     "*.less": [
-      "stylelint --fix",
-      "git add"
+      "stylelint --fix"
     ]
   },
   "husky": {
