--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@ant-design/icons": "^4.0.5",
     "@antv/data-set": "^0.11.1",
     "@antv/g2": "^4.0.3",
-    "@fluent-windows/hooks": "^1.0.0",
     "@rematch/core": "^1.4.0",
     "@rematch/persist": "^1.1.6",
     "@umijs/preset-react": "1.x",
@@ -48,7 +47,8 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.1.1",
     "prettier": "^2.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "umi-plugin-antd-theme": "^2.1.1"
   },
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
