--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@antv/g2": "^4.0.3",
     "@rematch/core": "^1.4.0",
     "@rematch/persist": "^1.1.6",
+    "@umijs/hooks": "^1.8.1",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.0.14",
     "antd": "^4.1.0",
@@ -47,8 +48,7 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.1.1",
     "prettier": "^2.0.2",
-    "typescript": "^3.8.3",
-    "umi-plugin-antd-theme": "^2.1.1"
+    "typescript": "^3.8.3"
   },
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
