build(docker): 完善 docker 相关配置

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -20,3 +20,12 @@ server {
     root        /usr/share/nginx/html;
   }
 }
+
+server {
+  listen        6666;
+  server_name   localhost;
+
+  location / {
+    proxy_pass  http://localhost;
+  }
+}
