build(docker): 切换至私有镜像仓库

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,31 +1,21 @@
 server {
-  listen        80;
-  server_name   localhost;
+  listen          80;
+  server_name     localhost;
 
-  gzip          on;
+  gzip            on;
   gzip_min_length 1k;
   gzip_comp_level 9;
-  gzip_types text/plain text/css text/javascript application/json application/javascript application/x-javascript application/xml;
-  gzip_vary     on;
-  gzip_disable  "MSIE [1-6]\.";
+  gzip_types      text/plain text/css text/javascript application/json application/javascript application/x-javascript application/xml;
+  gzip_vary       on;
+  gzip_disable    "MSIE [1-6]\.";
 
+  root            /usr/share/nginx/html;
   location / {
-    root        /usr/share/nginx/html;
-    index       index.html;
-    try_files   $uri $uri/ /index.html;
+    index         index.html;
+    try_files     $uri $uri/ /index.html;
   }
 
-  error_page    500 502 503 504  /50x.html;
-  location = /50x.html {
-    root        /usr/share/nginx/html;
-  }
-}
-
-server {
-  listen        6666;
-  server_name   localhost;
-
-  location / {
-    proxy_pass  http://localhost;
+  location /v1 {
+    proxy_pass    http://localhost:6666;
   }
 }
