build(nginx.conf): 调整 nginx 代理设置

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -15,7 +15,7 @@ server {
     try_files     $uri $uri/ /index.html;
   }
 
-  location /v1 {
-    proxy_pass    http://localhost:6666;
+  location /v1/ {
+    proxy_pass    http://localhost:6666/v1/;
   }
 }
