build(docker): 修改 nginx 反向代理设置

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -15,7 +15,9 @@ server {
     try_files     $uri $uri/ /index.html;
   }
 
-  location /v1/ {
-    proxy_pass    http://localhost:6666/v1/;
+  location /v1 {
+    proxy_pass    http://host.docker.internal:6666;
+    proxy_set_header   X-Forwarded-Proto $scheme;
+    proxy_set_header   X-Real-IP         $remote_addr;
   }
 }
