--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
-    "@antv/data-set": "^0.11.1",
-    "@antv/g2": "^4.0.3",
+    "@antv/data-set": "^0.11.4",
+    "@antv/g2": "4.0.7",
     "@umijs/hooks": "^1.9.2",
     "@umijs/preset-react": "^1.4.22",
     "@umijs/test": "^3.0.14",
     "antd": "^4.2.2",
     "clsx": "^1.1.0",
     "dayjs": "^1.8.23",
+    "echarts": "^4.7.0",
+    "echarts-for-react": "^2.0.15-beta.1",
     "js-cookie": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@ohbug/types": "^0.0.4",
+    "@types/echarts": "^4.6.0",
     "@types/js-cookie": "^2.2.5",
     "@types/react-timeago": "^4.1.1",
     "@types/redux-logger": "^3.0.7",
