--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "baseUrl": "./",
     "strict": true,
     "skipLibCheck": true,
+    "resolveJsonModule": true,
     "paths": {
       "@/*": ["src/*"],
       "@@/*": ["src/.umi/*"]
