feat(event): 完善 event 详情页的内容，适配新架构

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-logger": "^3.0.6",
     "rrweb-player": "^0.4.3",
     "source-map-trace": "^0.0.1",
+    "ua-device": "^0.1.10",
     "umi": "^3.1.1"
   },
   "devDependencies": {
