--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "@umijs/fabric": "^2.0.6",
+    "@umijs/plugin-esbuild": "^1.0.0-beta.2",
     "antd-dayjs-webpack-plugin": "^1.0.0",
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "3.1.0",
