--- a/package.json
+++ b/package.json
@@ -14,31 +14,30 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
+    "@ant-design/pro-layout": "^5.0.12",
     "@antv/data-set": "^0.11.4",
     "@antv/g2": "4.0.7",
     "@umijs/hooks": "^1.9.2",
-    "@umijs/preset-react": "^1.4.23",
-    "@umijs/test": "^3.0.14",
+    "@umijs/preset-react": "^1.5.3",
+    "@umijs/test": "^3.2.2",
     "antd": "^4.2.4",
     "clsx": "^1.1.0",
     "dayjs": "^1.8.23",
     "echarts": "^4.7.0",
     "echarts-for-react": "^2.0.15-beta.1",
     "js-cookie": "^2.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-timeago": "^4.4.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "redux-logger": "^3.0.6",
     "rrweb-player": "^0.4.3",
     "source-map-trace": "^0.0.1",
     "ua-device": "^0.1.10",
-    "umi": "^3.1.1"
+    "umi": "^3.2.2"
   },
   "devDependencies": {
     "@ohbug/types": "^0.0.6",
     "@types/echarts": "^4.6.0",
     "@types/js-cookie": "^2.2.5",
-    "@types/react-timeago": "^4.1.1",
     "@types/redux-logger": "^3.0.7",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
