--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "clsx": "^1.1.0",
     "dayjs": "^1.8.23",
     "echarts": "^4.7.0",
-    "echarts-for-react": "^2.0.15-beta.1",
+    "echarts-for-react": "^2.0.16",
     "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -39,8 +39,8 @@
     "@types/echarts": "^4.6.0",
     "@types/js-cookie": "^2.2.5",
     "@types/redux-logger": "^3.0.7",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
     "@umijs/fabric": "^2.0.6",
     "@umijs/plugin-esbuild": "^1.0.0-beta.2",
     "antd-dayjs-webpack-plugin": "^1.0.0",
