--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@umijs/hooks": "^1.9.2",
     "@umijs/preset-react": "^1.5.3",
     "@umijs/test": "^3.2.2",
+    "ali-oss": "^6.9.0",
     "antd": "^4.2.4",
+    "antd-img-crop": "^3.4.0",
     "clsx": "^1.1.0",
     "dayjs": "^1.8.23",
     "echarts": "^4.7.0",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@ohbug/types": "^0.0.6",
+    "@types/ali-oss": "^6.0.5",
     "@types/echarts": "^4.6.0",
     "@types/js-cookie": "^2.2.5",
     "@types/redux-logger": "^3.0.7",
