--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@antv/data-set": "^0.11.4",
     "@antv/g2": "4.0.7",
     "@ohbug/core": "^0.0.11",
-    "@umijs/hooks": "^1.9.2",
     "@umijs/preset-react": "^1.5.6",
     "@umijs/test": "^3.2.2",
+    "ahooks": "^2.0.1",
     "ali-oss": "^6.9.0",
     "antd": "^4.3.4",
     "antd-img-crop": "^3.4.0",
