--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@umijs/preset-react": "^1.5.14",
     "@umijs/test": "^3.2.2",
     "ahooks": "^2.0.1",
-    "ali-oss": "^6.9.0",
     "antd": "^4.3.4",
     "antd-img-crop": "^3.4.0",
     "clsx": "^1.1.0",
     "dayjs": "^1.8.23",
     "echarts": "^4.7.0",
     "echarts-for-react": "^2.0.16",
+    "generate-avatar": "^1.4.4",
     "js-cookie": "^2.2.1",
     "path-to-regexp": "^6.1.0",
     "react": "^16.13.1",
