使用 Dockerfile.test 构建 image

--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "private": true,
   "scripts": {
     "postinstall": "umi g tmp",
-    "start": "umi dev",
-    "build": "umi build",
+    "prebuild": "rimraf dist",
+    "start": "cross-env ENV_TAG=development PORT=8888 umi dev",
+    "build:test": "cross-env ENV_TAG=test umi build",
+    "build": "cross-env ENV_TAG=production umi build",
     "build:analyze": "cross-env ANALYZE=1 umi build",
-    "docker:build": "docker build -t ohbug/web-app .",
-    "docker:dev": "docker-compose -f ./docker/docker-compose.dev.yml up --build",
-    "docker:prod": "docker-compose -f ./docker/docker-compose.yml up --build -d",
+    "docker:build:test": "docker build -t ohbug-web-app-test -f Dockerfile.test .",
+    "docker:build:prod": "docker build -t ohbug-web-app .",
+    "docker:test": "docker-compose -f docker-compose.test.yml up --build -d",
+    "docker:prod": "docker-compose -f docker-compose.yml up --build -d",
+    "deploy:test": "npm run docker:build:test && npm run docker:test",
+    "deploy:prod": "npm run docker:build:prod && npm run docker:prod",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
+    "test:coverage": "umi-test --coverage",
+    "update:deps": "yarn upgrade-interactive --latest"
   },
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
     "@ant-design/pro-layout": "^6.0.1",
     "@antv/data-set": "^0.11.4",
-    "@antv/g2": "4.0.7",
+    "@antv/g2": "4.0.14",
     "@ohbug/core": "^0.0.11",
     "@umijs/preset-react": "^1.5.14",
     "@umijs/test": "^3.2.2",
@@ -50,12 +56,13 @@
     "@umijs/plugin-esbuild": "^1.0.0-beta.2",
     "antd-dayjs-webpack-plugin": "^1.0.0",
     "cross-env": "^7.0.2",
-    "cz-conventional-changelog": "3.1.0",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.3",
+    "cz-conventional-changelog": "3.2.0",
+    "eslint": "^7.5.0",
+    "eslint-loader": "^4.0.2",
     "husky": "^4.2.3",
     "lint-staged": "^10.1.1",
     "prettier": "^2.0.4",
+    "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
   },
   "lint-staged": {
