--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     },
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
+  "include": ["src", "config"],
   "exclude": ["node_modules"]
 }
