--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3.7'
 
 services:
   web-app:
-    container_name: web-app
-    image: ohbug/web-app
+    image: ohbug-web-app
     volumes:
       - /usr/src/app
     ports:
