--- a/package.json
+++ b/package.json
@@ -7,12 +7,8 @@
     "build:test": "cross-env ENV_TAG=test umi build",
     "build": "cross-env ENV_TAG=production umi build",
     "build:analyze": "cross-env ANALYZE=1 umi build",
-    "docker:build:test": "docker build -t ohbug-web-app-test -f Dockerfile.test .",
-    "docker:build:prod": "docker build -t ohbug-web-app .",
-    "docker:test": "docker-compose -f docker-compose.test.yml up --build -d",
+    "docker:build": "docker build -t ohbug-web-app .",
     "docker:prod": "docker-compose -f docker-compose.yml up --build -d",
-    "deploy:test": "npm run docker:build:test && npm run docker:test",
-    "deploy:prod": "npm run docker:build:prod && npm run docker:prod",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
