--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Install Dependencies
         run: yarn
@@ -17,7 +17,7 @@ jobs:
         run: yarn build:test
 
       - name: Deploy to Server
-      - uses: easingthemes/ssh-deploy@v2.1.1
+        uses: easingthemes/ssh-deploy@v2.1.1
         env:
           SSH_PRIVATE_KEY: ${{ secrets.WEB_APP_KEY_TEST }}
           ARGS: "-rltgoDzvO --delete"
@@ -27,7 +27,7 @@ jobs:
           TARGET: ${{ secrets.WEB_APP_TARGET_TEST }}
 
       - name: Restart server
-      - uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.WEB_APP_HOST_TEST }}
           username: ${{ secrets.WEB_APP_USERNAME_TEST }}
