feat: 适配新版 ohbug

--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
-    "@ant-design/pro-layout": "^6.0.1",
+    "@ant-design/pro-layout": "^6.3.0",
     "@antv/data-set": "^0.11.4",
     "@antv/g2": "4.0.14",
-    "@ohbug/core": "^0.0.11",
+    "@ohbug/browser": "^1.0.3-alpha.0",
+    "@ohbug/core": "^1.0.0-alpha.0",
     "@umijs/preset-react": "^1.5.14",
-    "@umijs/test": "^3.2.2",
+    "@umijs/test": "^3.2.12",
     "ahooks": "^2.0.1",
     "antd": "^4.5.1",
     "antd-img-crop": "^3.4.0",
     "clsx": "^1.1.0",
-    "dayjs": "^1.8.23",
+    "dayjs": "^1.8.31",
     "echarts": "^4.7.0",
     "echarts-for-react": "^2.0.16",
     "generate-avatar": "^1.4.4",
@@ -43,7 +44,7 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
-    "@ohbug/types": "^0.0.6",
+    "@ohbug/types": "^1.0.0-alpha.0",
     "@types/ali-oss": "^6.0.5",
     "@types/echarts": "^4.6.4",
     "@types/js-cookie": "^2.2.5",
