feat: 完成引导页内容

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ant-design/pro-layout": "^6.3.0",
     "@ohbug/browser": "^1.0.3-alpha.0",
     "@ohbug/core": "^1.0.0-alpha.0",
+    "@types/react-syntax-highlighter": "^11.0.4",
     "@umijs/preset-react": "^1.5.14",
     "@umijs/test": "^3.2.14",
     "@welldone-software/why-did-you-render": "^4.2.7",
@@ -32,6 +33,7 @@
     "path-to-regexp": "^6.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-syntax-highlighter": "^13.2.1",
     "redux-persist": "^6.0.0",
     "rrweb-player": "^0.4.3",
     "source-map-trace": "^0.1.2",
