--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@ant-design/pro-layout": "^6.4.8",
-    "@ohbug/browser": "^1.0.6-alpha.0",
-    "@ohbug/core": "^1.0.2-alpha.0",
-    "@ohbug/react": "^1.0.3-alpha.0",
+    "@ohbug/browser": "^1.0.11",
+    "@ohbug/react": "^1.0.7",
     "@types/react-syntax-highlighter": "^11.0.4",
     "@umijs/preset-react": "^1.5.21",
     "@umijs/test": "^3.2.16",
@@ -44,23 +43,22 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.2",
-    "@ohbug/types": "^1.0.0-alpha.0",
     "@types/echarts": "^4.6.4",
     "@types/redux-logger": "^3.0.7",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "@umijs/fabric": "^2.0.6",
     "@umijs/plugin-esbuild": "^1.0.0-beta.2",
     "antd-dayjs-webpack-plugin": "^1.0.1",
     "cross-env": "^7.0.2",
-    "cz-conventional-changelog": "3.2.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.7.0",
     "eslint-loader": "^4.0.2",
     "husky": "^4.2.3",
     "lint-staged": "^10.1.1",
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.2"
   },
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
