feat: 发布 docker image

--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
     "postinstall": "umi g tmp",
     "prebuild": "rimraf dist",
     "start": "cross-env ENV_TAG=development PORT=8888 umi dev",
-    "build:test": "cross-env ENV_TAG=test umi build",
     "build": "cross-env ENV_TAG=production umi build",
     "build:analyze": "cross-env ANALYZE=1 umi build",
-    "docker:build": "docker build -t ohbug-web-app .",
-    "docker:prod": "docker-compose -f docker-compose.yml up --build -d",
+    "docker:prod": "docker-compose -f ./docker/docker-compose.yml up --build -d",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
