--- a/.github/workflows/push_to_registry.yml
+++ b/.github/workflows/push_to_registry.yml
@@ -25,6 +25,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/386
+          platforms: linux/amd64
           push: true
           tags: ohbug/ohbug-web-app:latest
