--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "antd-dayjs-webpack-plugin": "^1.0.6",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "3.3.0",
+    "eslint-loader": "^4.0.2",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "rimraf": "^3.0.2",
